--- a/EF6DBFirstDemo/EF6DBFirstDemo.csproj
+++ b/EF6DBFirstDemo/EF6DBFirstDemo.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>EF6DBFirstDemo</RootNamespace>
     <AssemblyName>EF6DBFirstDemo</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <PublishUrl>publish\</PublishUrl>
@@ -26,6 +26,7 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -66,11 +67,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="C1st2DB1st.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>C1st2DB1st.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="C1st2DB1st.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>C1st2DB1st.tt</DependentUpon>
+    </Compile>
+    <Compile Include="C1st2DB1st.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Cours.cs">
+      <DependentUpon>C1st2DB1st.tt</DependentUpon>
+    </Compile>
     <Compile Include="Course.cs">
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
     <Compile Include="GetCoursesByStudentId_Result.cs">
       <DependentUpon>School.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Grade.cs">
+      <DependentUpon>C1st2DB1st.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -93,13 +115,16 @@
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
     <Compile Include="Student.cs">
-      <DependentUpon>School.tt</DependentUpon>
+      <DependentUpon>C1st2DB1st.tt</DependentUpon>
     </Compile>
     <Compile Include="StudentAddress.cs">
-      <DependentUpon>School.tt</DependentUpon>
+      <DependentUpon>C1st2DB1st.tt</DependentUpon>
     </Compile>
     <Compile Include="Teacher.cs">
       <DependentUpon>School.tt</DependentUpon>
+    </Compile>
+    <Compile Include="TeacherInfo.cs">
+      <DependentUpon>C1st2DB1st.tt</DependentUpon>
     </Compile>
     <Compile Include="View_StudentCourse.cs">
       <DependentUpon>School.tt</DependentUpon>
@@ -107,6 +132,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="C1st2DB1st.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>C1st2DB1st.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="C1st2DB1st.edmx.diagram">
+      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <EntityDeploy Include="School.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -120,6 +152,16 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="C1st2DB1st.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
+      <LastGenOutput>C1st2DB1st.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="C1st2DB1st.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
+      <LastGenOutput>C1st2DB1st.cs</LastGenOutput>
+    </Content>
     <Content Include="ReadMe.txt" />
     <Content Include="School.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -130,9 +172,6 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>School.edmx</DependentUpon>
       <LastGenOutput>School.cs</LastGenOutput>
-    </Content>
-    <Content Include="SchoolDB.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
