--- a/EF6DBFirstDemo/EF6DBFirstDemo.csproj
+++ b/EF6DBFirstDemo/EF6DBFirstDemo.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -27,6 +28,8 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -49,10 +52,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -67,32 +70,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="C1st2DB1st.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>C1st2DB1st.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="C1st2DB1st.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>C1st2DB1st.tt</DependentUpon>
-    </Compile>
-    <Compile Include="C1st2DB1st.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Cours.cs">
-      <DependentUpon>C1st2DB1st.tt</DependentUpon>
-    </Compile>
     <Compile Include="Course.cs">
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
     <Compile Include="GetCoursesByStudentId_Result.cs">
       <DependentUpon>School.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Grade.cs">
-      <DependentUpon>C1st2DB1st.tt</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -115,16 +97,13 @@
       <DependentUpon>School.tt</DependentUpon>
     </Compile>
     <Compile Include="Student.cs">
-      <DependentUpon>C1st2DB1st.tt</DependentUpon>
+      <DependentUpon>School.tt</DependentUpon>
     </Compile>
     <Compile Include="StudentAddress.cs">
-      <DependentUpon>C1st2DB1st.tt</DependentUpon>
+      <DependentUpon>School.tt</DependentUpon>
     </Compile>
     <Compile Include="Teacher.cs">
       <DependentUpon>School.tt</DependentUpon>
-    </Compile>
-    <Compile Include="TeacherInfo.cs">
-      <DependentUpon>C1st2DB1st.tt</DependentUpon>
     </Compile>
     <Compile Include="View_StudentCourse.cs">
       <DependentUpon>School.tt</DependentUpon>
@@ -132,13 +111,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <EntityDeploy Include="C1st2DB1st.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>C1st2DB1st.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="C1st2DB1st.edmx.diagram">
-      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
     <EntityDeploy Include="School.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -152,16 +124,6 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="C1st2DB1st.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
-      <LastGenOutput>C1st2DB1st.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="C1st2DB1st.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>C1st2DB1st.edmx</DependentUpon>
-      <LastGenOutput>C1st2DB1st.cs</LastGenOutput>
-    </Content>
     <Content Include="ReadMe.txt" />
     <Content Include="School.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -187,4 +149,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
 </Project>
