--- a/EF6DBFirstDemo/App.config
+++ b/EF6DBFirstDemo/App.config
@@ -8,18 +8,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <connectionStrings>
-    <add name="SchoolDBEntities1" 
-		 connectionString="metadata=res://*/School.csdl|res://*/School.ssdl|res://*/School.msl;
-		 provider=System.Data.SqlClient;
-		 provider connection string=&quot;
-		 data source=(localdb)\mssqllocaldb;
-		 initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
-		 providerName="System.Data.EntityClient" />
-    <add name="SchoolDBEntities" 
-		 connectionString="metadata=res://*/School.csdl|res://*/School.ssdl|res://*/School.msl;provider=System.Data.SqlClient;
-		 provider connection string=&quot;
-		 data source=(local);
-		 initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SchoolDBEntities1" connectionString="metadata=res://*/School.csdl|res://*/School.ssdl|res://*/School.msl;provider=System.Data.SqlClient;provider connection string=&quot;    data source=(localdb)\mssqllocaldb;    initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SchoolDBEntities" connectionString="metadata=res://*/School.csdl|res://*/School.ssdl|res://*/School.msl;provider=System.Data.SqlClient;provider connection string=&quot;    data source=(local);    initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entitties" connectionString="metadata=res://*/CU.csdl|res://*/CU.ssdl|res://*/CU.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=CU-MVC;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
